post: clean up after nodes that are evicted/replaced (PR 1964767)
Change-Id: I3f8c9e30dfa270445fb346c8a9d929869a990ecd

--- a/lwraft/config/Makefile.am
+++ b/lwraft/config/Makefile.am
@@ -5,6 +5,7 @@ lwraftconf_DATA = \
     postd-syslog-ng.conf \
     saslpostd.conf \
     post-rest.json \
-    post-telegraf.conf
+    post-telegraf.conf \
+    post-demote-deads.sh
 
 bin_SCRIPTS = 
