--- a/lwraft/config/deployment/aws/appspec.yml
+++ b/lwraft/config/deployment/aws/appspec.yml
@@ -32,3 +32,11 @@ hooks:
     - location: scripts/validate_service.sh
       timeout: 300
       runas: root
+  BeforeAllowTraffic:
+    - location: scripts/before_allow_traffic.sh
+      timeout: 300
+      runas: root
+  AfterAllowTraffic:
+    - location: scripts/after_allow_traffic.sh
+      timeout: 300
+      runas: root
