vmca vecs integration (HTTPS support)
bug: 1980671

Change:
     Enabled HTTP over REST and HTTPS over REST end points for VMCA
     Added the logic to obtain cert/key from VECS
     In addition to that cleaned the way vmafd header files were referred in vmca, vmdir and post.
Test:
    1) Issued simple curl commands on the REST end point over VMCA default HTTP port(7777)
           - curl -v http://localhost:7777/v1/vmca
    2) Issued simple curl commands on the REST end point over VMCA default HTTPS port(7778)
           - curl -v -k https://localhost:7778/v1/vmca
    3) Tested with disabling HTTP and HTTPS end point using the registry key
           - /opt/likewise/bin/lwregshell add_value "[Services\vmca\Parameters]" "RestListenHTTPPort" REG_SZ ""
           - /opt/likewise/bin/lwregshell add_value "[Services\vmca\Parameters]" "RestListenHTTPSPort" REG_SZ ""
    4) Enabling HTTP and HTTPS end point on a different port than default
           - /opt/likewise/bin/lwregshell add_value "[Services\vmca\Parameters]" "RestListenHTTPPort" REG_SZ "7780"
           - /opt/likewise/bin/lwregshell add_value "[Services\vmca\Parameters]" "RestListenHTTPSPort" REG_SZ "7781"
    5) All HTTPS related tests were performed by ignoring the certificate validation part.

Change-Id: I43953137df6cc17f51dded598db77cfd2b2bbab2

--- a/vmca/common/Makefile.am
+++ b/vmca/common/Makefile.am
@@ -17,6 +17,8 @@ libcommon_la_SOURCES = \
     ldap.c \
     string.c \
     misc.c \
+    vmafdlib.c \
+    vecs.c \
     pkcs_crl.c \
     logging.c
 
@@ -24,6 +26,7 @@ libcommon_la_CPPFLAGS = \
     -DLDAP_DEPRECATED \
     -I$(top_srcdir)/vmca/include \
     -I$(top_srcdir)/vmca/include/public \
+    -I$(top_srcdir)/vmafd/include/public \
     @LW_INCLUDES@ \
     @OPENSSL_INCLUDES@
 
