--- a/configure.ac
+++ b/configure.ac
@@ -1046,6 +1046,11 @@ AC_DEFINE_UNQUOTED(VMDIR_LIB_DIR, "$VMDIR_LIB_DIR", [Lib directory])
 vmdirsasldir=$vmdirlibdir/sasl2
 AC_SUBST(vmdirsasldir)
 
+vmcalibdir=$prefix/lib64
+AC_SUBST(vmcalibdir)
+AS_AC_EXPAND(VMCA_LIB_DIR, $vmcalibdir)
+AC_DEFINE_UNQUOTED(VMCA_LIB_DIR, "$VMCA_LIB_DIR", [Lib directory])
+
 #--------------------------------------------------------------------
 
 AC_ARG_WITH([logdir],
@@ -1067,6 +1072,10 @@ AC_SUBST(lwraftlogdir)
 AS_AC_EXPAND(LWRAFT_LOG_DIR, $lwraftlogdir)
 AC_DEFINE_UNQUOTED(LWRAFT_LOG_DIR, "$LWRAFT_LOG_DIR", [Log directory])
 
+vmcalogdir=$LOG_BASE_PATH
+AC_SUBST(vmcalogdir)
+AS_AC_EXPAND(VMCA_LOG_DIR, $vmcalogdir)
+AC_DEFINE_UNQUOTED(VMCA_LOG_DIR, "$VMCA_LOG_DIR", [Log directory])
 #--------------------------------------------------------------------
 
 AC_ARG_WITH([psc-version],
