--- a/lwraft/server/ldap-head/Makefile.am
+++ b/lwraft/server/ldap-head/Makefile.am
@@ -36,6 +36,7 @@ libldap_head_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/thirdparty/openldap/libraries/libldap \
     -I$(top_srcdir)/lwraft/server/include \
     -I$(top_srcdir)/vmmetrics/include/public \
+    -I$(top_srcdir)/vmafd/include/public \
     @OPENSSL_INCLUDES@ \
     @LW_INCLUDES@
 
