This change is to make the DNS forwarders specific to an instance. Earlier DNS forwarders was set across domains.
Reviewed By: Suresh Chellappan, Jonathan Brown, Neel Shah, Lars Opstad
Approved By: Suresh Chellappan

Change-Id: I92cfea7ee4781a9323406631a693e1e014349156

--- a/vmdns/server/common/Makefile.am
+++ b/vmdns/server/common/Makefile.am
@@ -21,6 +21,7 @@ libsrvcommon_la_SOURCES = \
     nameEntry.c           \
     recordlist.c          \
     recordobject.c        \
+    registry.c            \
     securityutils.c       \
     dnsprotocol.c         \
     serviceapi.c          \
