--- a/vmidentity/make-target/Makefile.am
+++ b/vmidentity/make-target/Makefile.am
@@ -30,15 +30,24 @@ vmstsjars_DATA= \
     @top_builddir@/vmidentity/vmware-sts/packages/vmware-identity-sso-config.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/websso.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/sts.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/args4j-2.33.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/commons-codec-1.9.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/commons-lang-2.6.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/commons-lang3-3.3.2.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/jersey-media-json-jackson-2.25.1.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/jackson-core-2.8.4.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/jackson-databind-2.8.4.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/jackson-annotations-2.8.4.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/jna-4.2.1.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/json-smart-1.3.1.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/commons-logging-1.2.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/httpclient-4.5.1.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/httpcore-4.4.4.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/slf4j-api-1.7.25.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/log4j-api-2.8.2.jar \
     @top_builddir@/vmidentity/vmware-sts/packages/lib/log4j-slf4j-impl-2.8.2.jar \
-    @top_builddir@/vmidentity/vmware-sts/packages/lib/log4j-core-2.8.2.jar
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/log4j-core-2.8.2.jar \
+    @top_builddir@/vmidentity/vmware-sts/packages/lib/nimbus-jose-jwt-4.12.jar
 
 vmstswebapps_DATA= \
     @top_builddir@/vmidentity/vmware-sts/packages/openidconnect-sample-rp.war \
