--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -360,6 +360,7 @@
     <httpclient.version>4.5.1</httpclient.version>
     <httpcore.version>4.4.4</httpcore.version>
     <jackson.version>2.8.4</jackson.version>
+    <json-smart.version>1.3.1</json-smart.version>
     <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
     <javax.servlet.version>3.1.0</javax.servlet.version>
     <javax.ws.version>2.0.1</javax.ws.version>
