--- a/vmidentity/sso-config/pom.xml
+++ b/vmidentity/sso-config/pom.xml
@@ -126,6 +126,11 @@
       <artifactId>jackson-annotations</artifactId>
       <version>${jackson.version}</version>
     </dependency>
+    <dependency>
+      <groupId>net.minidev</groupId>
+      <artifactId>json-smart</artifactId>
+      <version>${json-smart.version}</version>
+    </dependency>
   </dependencies>
 
   <properties>
