--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -1,9 +1,9 @@
 FROM vmware/photon:1.0
-MAINTAINER "Andrew Gormley" <agormley@vmware.com>
+MAINTAINER "Jonathan Brown" <brownj@vmware.com>
 ENV container=docker
 VOLUME ["/sys/fs/cgroup"]
 LABEL vendor="VMware, Inc."
-LABEL com.vmware.lightwave.version="1.2.0"
+LABEL com.vmware.lightwave.version="1.3.1"
 
 EXPOSE 22 53/udp 53 88/udp 88 389 443 636 2012 2014 2015 2020
 ENTRYPOINT ["/lightwave-init"]
@@ -11,23 +11,23 @@ ENTRYPOINT ["/lightwave-init"]
 # Build hook
 
 RUN tdnf update --refresh -y \
-        tdnf \
-        rpm-4.11.2 \
-        pcre-8.39 \
-        openssl-1.0.2j \
-        expat-2.2.0 \
-        curl-7.51.0 \
-        bzip2-1.0.6 && \
+    rpm-4.13.1 \
+    tdnf \
+    pcre-8.39 \
+    openssl-1.0.2j \
+    expat-2.2.0 \
+    curl-7.51.0 \
+    bzip2-1.0.6 && \
     tdnf install -y \
-        apache-tomcat-8.5.8 \
-        boost-1.60.0 \
-        commons-daemon-1.0.15 \
-        likewise-open-6.2.11 \
-        openjre-1.8.0.112 \
-        procps-ng-3.3.11 \
-        sed-4.2.2 \
-        jansson-2.9 \
-        vmware-lightwave-server-1.2.0 && \
+    apache-tomcat-8.5.20 \
+    boost-1.60.0 \
+    commons-daemon-1.0.15 \
+    likewise-open-6.2.11 \
+    openjre-1.8.0.141 \
+    procps-ng-3.3.11 \
+    sed-4.2.2 \
+    jansson-2.9 \
+    lightwave-1.3.1 && \
     rpm -e --nodeps systemd && \
     mkdir -p /var/run/sshd && \
     chmod -rx /var/run/sshd && \
