--- a/support/docker/Dockerfile
+++ b/support/docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM vmware/photon:1.0
+FROM vmware/lightwave-base:1.0.0
 MAINTAINER "Jonathan Brown" <brownj@vmware.com>
 ENV container=docker
 VOLUME ["/sys/fs/cgroup"]
@@ -10,30 +10,7 @@ ENTRYPOINT ["/lightwave-init"]
 
 # Build hook
 
-RUN tdnf update --refresh -y \
-    rpm-4.13.1 \
-    tdnf \
-    pcre-8.39 \
-    openssl-1.0.2j \
-    expat-2.2.0 \
-    curl-7.51.0 \
-    bzip2-1.0.6 && \
-    tdnf install -y \
-    apache-tomcat-8.5.20 \
-    boost-1.60.0 \
-    commons-daemon-1.0.15 \
-    likewise-open-6.2.11 \
-    openjre-1.8.0.141 \
-    procps-ng-3.3.11 \
-    sed-4.2.2 \
-    jansson-2.9 \
-    lightwave-1.3.1 && \
-    rpm -e --nodeps systemd && \
-    mkdir -p /var/run/sshd && \
-    chmod -rx /var/run/sshd && \
-    rm -rf /usr/share/doc/* && \
-    rm -rf /usr/share/man/* && \
-    rm -rf /usr/include/* && \
+RUN tdnf install -y lightwave-1.3.1 && \
     /opt/likewise/sbin/lwsmd --start-as-daemon && \
     /opt/likewise/bin/lwregshell set_value "[HKEY_THIS_MACHINE\\Services\\vmafd]" \
         Arguments "/opt/vmware/sbin/vmafdd -c" && \
@@ -42,5 +19,12 @@ RUN tdnf update --refresh -y \
     /opt/likewise/bin/lwregshell set_value "[HKEY_THIS_MACHINE\\Services\\vmdir]" \
         Arguments "/opt/vmware/sbin/vmdird -l 0 -f /opt/vmware/share/config/vmdirschema.ldif" && \
     /opt/likewise/bin/lwregshell set_value "[HKEY_THIS_MACHINE\\Services\\vmdns]" \
-        Arguments "/opt/vmware/sbin/vmdnsd"
+        Arguments "/opt/vmware/sbin/vmdnsd" && \
+    rpm -e --nodeps systemd && \
+    rpm -e createrepo && \
+    rm -rf /usr/share/doc/* && \
+    rm -rf /usr/share/man/* && \
+    rm -rf /usr/include/* && \
+    rm -rf /tmp/vmware/lightwave
+
 ADD lightwave-init /
