PR 1994467: replication connection done in bg thr
Three nodes ring topology cluster.
1. verify changes replicates promptly between node 1/2/3
2. stop vmdir on node 1
3. verify changes continue to replicate promptly between node 2/3
4. shutdown node 1
5. verify changes continue to replicate promptly between node 2/3
6. boot up node 1 and start vmdir
7. verify changes continue to replicate promptly between node 1/2/3

Change-Id: I2a0bdde95b86b8e5a5adc3708cc506fa2ee9e486

--- a/vmdir/server/common/Makefile.am
+++ b/vmdir/server/common/Makefile.am
@@ -11,6 +11,7 @@ noinst_LTLIBRARIES = libsrvcommon.la
 
 libsrvcommon_la_SOURCES = \
     candidates.c          \
+    dcconnthr.c           \
     entryencodedecode.c   \
     krbsrvutil.c          \
     oprequestutil.c       \
