Ability to perform Bulk Search - Phase 1
Bug: 1780839

change:
    - Task 1: Small Candidate list - page search
        - Added logic in the InternalSearch API to take different path for
        - Added page search context hash table and hash table access
          API's (create, free, findKey, InsertKey)
          page search and normal search
        - Build candidate list all at once but only during first
          iteration
        - Generate cookie and cache the page search context
        - Subsequent page search retrieve the page search context and
          serve the request

Test:
    - Compare page search with normal search results
      ldapsearch -h localhost -x -D "cn=administrator,cn=users,dc=lightwave,dc=local" -w 'xx' -b "cn=users,dc=lightwave,dc=local" dn -E  pr=1/noprompt
      ldapsearch -h localhost -x -D "cn=administrator,cn=users,dc=lightwave,dc=local" -w 'xx' -b "cn=users,dc=lightwave,dc=local" dn
    - Compare page search with different page size, smaller than result size, equal to result size and greater than result size. In the considered case
      result size was '6'.
      ldapsearch -h localhost -x -D "cn=administrator,cn=users,dc=lightwave,dc=local" -w 'xx' -b "cn=users,dc=lightwave,dc=local" dn -E  pr=1/noprompt
      ldapsearch -h localhost -x -D "cn=administrator,cn=users,dc=lightwave,dc=local" -w 'xx' -b "cn=users,dc=lightwave,dc=local" dn -E  pr=6/noprompt
      ldapsearch -h localhost -x -D "cn=administrator,cn=users,dc=lightwave,dc=local" -w 'xx' -b "cn=users,dc=lightwave,dc=local" dn -E  pr=10/noprompt
    - Trigger shutdown during active page search, issued a page search with prompt from client and triggered shutdown on the vmdir, to ensure
      clean is done properly.
    - Initiate page search with prompt from the ldap client and don't issue any more request with corresponding cookie. This will ensure, stale entries
      are cleaned up during the shutdown stage.
    - Since funcationality is not complete, during the final 

--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -21,6 +21,7 @@ libmiddle_layer_la_SOURCES = \
     krb.c \
     lockoutpolicy.c \
     modify.c \
+    pagedsearch.c \
     password.c \
     plugin.c \
     pscache.c \
