Remaining winjoin changes
Modified build_photon.sh so to cache debug and --enable-winjoin
build flags. Modified Makefile.am so it builds with and without
--enable-winjoin configured.
Misc modifications to various files for winjoin to work. Some may need

Templated configuration scripts so all configuation values reside
in the main lightwave-promte-dc.sh utility.

Change-Id: I7a2b20f1dd45bbdcc561d9f4aec7319939b6e818

--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -3,7 +3,7 @@ sbin_PROGRAMS = vmdird
 idl_srcdir=$(top_srcdir)/vmdir/idl
 
 if MSPAC_SUPPORT
-    PAC_SRC = krb-mspac.c ms_pac_cstub.c
+    PAC_SRC = krb.c krb-mspac.c ms_pac_cstub.c
     BUILT_SOURCES_PAC = ms_pac_h.h
     CLEAN_PAC = ms_pac_h.h ms_pac_cstub.c
 else
@@ -29,7 +29,6 @@ vmdird_SOURCES = \
     ipcserver.c \
     ipclocalapi.c \
     ipcapihandler.c \
-    krb.c \
     main.c \
     metricsinit.c \
     parseargs.c \
