New Lightwave webUI with lightwave directory browser - Initial Commit.
Change-Id: I064f737526d6f76ba119d709d9475f571cb44209

--- a/.gitignore
+++ b/.gitignore
@@ -503,6 +503,8 @@ FakesAssemblies/
 # Node.js Tools for Visual Studio
 .ntvs_analysis.dat
 node_modules/
+node/
+dist/
 
 # Typescript v1 declaration files
 typings/
