Begin and End Upgrade This change introduces two new APIs. Begin and End Upgrade. BeginUpgrade API will be called before a lightwave planned upgrade or downtime happens. EndUpgrade API will be called once this upgrade or downtime is over In the period after BeginUpgrade is called and before EndUpgrade is called, the Lightwave server is considered "unusable". This property will be used by the Lightwave clients to pick the right Lightwave node to talk to.
Reviewed By: Suresh Chellappan, Amit Bapat, Jonathan Brown
Approved By: Suresh chellappan
Bugs/Issues addressed: Part of the changes needed to support Lightwave HA, Lightwave 0 downtime upgrade

Change-Id: I218a99e33d1512a8ff95bfa4c35734cc931b370b

--- a/vmafd/server/vmafd/Makefile.am
+++ b/vmafd/server/vmafd/Makefile.am
@@ -18,6 +18,7 @@ vmafdd_SOURCES = \
     dns.c         \
     globals.c     \
     heartbeat.c     \
+    ha_upgrade.c     \
     ipcapihandler.c \
     ipclocalapi.c \
     ipcmarshalhelper.c \
