vmdir replication monitoring (1st phase)
- created framework for metrics cache for adding/deleting/searching metrics per node.
- simplified current set of metrics from 5 to 2 (vmdir.repl.time.cycle.succeeded and vmdir.repl.time.cycle.failed)
- testing in progress

Change-Id: I171ecf00cd8799d3ae8349b0f201dd098f499e1c

--- a/vmdir/server/middle-layer/Makefile.am
+++ b/vmdir/server/middle-layer/Makefile.am
@@ -16,8 +16,8 @@ libmiddle_layer_la_SOURCES = \
     delete.c \
     dn.c \
     globals.c \
-    group.c \
-    index.c \
+    groupplugin.c \
+    indexplugin.c \
     krb.c \
     lockoutpolicy.c \
     modify.c \
@@ -25,6 +25,7 @@ libmiddle_layer_la_SOURCES = \
     password.c \
     plugin.c \
     pscache.c \
+    replplugin.c \
     sasl.c \
     saslsockbuf.c \
     search.c \
