--- a/vmdir/server/replication/Makefile.am
+++ b/vmdir/server/replication/Makefile.am
@@ -2,9 +2,10 @@
 noinst_LTLIBRARIES = libreplication.la
 
 libreplication_la_SOURCES = \
+    firstreplcycle.c \
+    globals.c \
     libmain.c \
     metrics.c \
-    firstreplcycle.c \
     replentry.c \
     thread.c
 
