Add logging and metrics when leader election happens
Bug Number: 2008116

This change was made to add metrics to monitor the number of times a
leader election gets triggered on POST. The expectation is that a
election should only be triggered during a deployment or upgarde. All
other times the leader should persist.

Change-Id: I5788bcaf6a33d711d1064e96545b1bf2a8d3eb69

--- a/lwraft/server/replication/Makefile.am
+++ b/lwraft/server/replication/Makefile.am
@@ -4,6 +4,7 @@ noinst_LTLIBRARIES = libreplication.la
 libreplication_la_SOURCES = \
     libmain.c \
     firstreplcycle.c \
+    metricsinit.c \
     replentry.c \
     thread.c
 
