--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -390,6 +390,7 @@
     <openws.version>1.5.4</openws.version>
     <policy.version>2.3.1</policy.version>
     <powermock.version>1.6.2</powermock.version>
+    <prometheus.version>0.1.0</prometheus.version>
     <reflections.version>0.9.10</reflections.version>
     <saaj-api.version>1.3.5</saaj-api.version>
     <saaj-impl.version>1.3</saaj-impl.version>
