--- a/vmidentity/pom.xml
+++ b/vmidentity/pom.xml
@@ -37,6 +37,7 @@
         <module>openidconnect</module>
         <module>websso</module>
         <module>lightwaveui</module>
+        <module>webui</module>
         <module>sso-config</module>
         <module>service</module>
       </modules>
