Add feature: Single Master Writer
The PR is 1957423. The feature offers Raft-like Voting/Ping mechanism
to elect a single leader within a replication region (site), and the
Raft RPC calls are implemented using LDAP control/search responses.

Added an async connections thread to handle all peers connections.

Test cases (same site):
  1. promote node1;
  2. promote node2;
  3. promote node3;
  4. demote node3;
  5. demote node2;
  6. test with two sites, each site with 3 nodes.

Change-Id: If289540f57a1735a79c5b7195f48ab8926e5de7f

--- a/vmdir/server/Makefile.am
+++ b/vmdir/server/Makefile.am
@@ -21,6 +21,7 @@ SUBDIRS = \
     rest-head \
     middle-layer \
     replication \
+    clusterstate \
     saslvmdirdb \
     schema \
     acl \
