Store External OAUTH Provider configuration
Change-Id: I360495295aab6404fd75e9a6f12f073680d74d24

--- a/vmidentity/idm/client/pom.xml
+++ b/vmidentity/idm/client/pom.xml
@@ -70,6 +70,13 @@
       <version>${commons.lang.version}</version>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>net.minidev</groupId>
+      <artifactId>json-smart</artifactId>
+      <version>${json-smart.version}</version>
+    </dependency>
+
   </dependencies>
 
   <properties>
