Enable building lightwave webui
Change-Id: I0c6545d79260d833564f6dc206f2230740413bdc

--- a/vmidentity/make-target/Makefile.am
+++ b/vmidentity/make-target/Makefile.am
@@ -52,6 +52,7 @@ vmstsjars_DATA= \
 vmstswebapps_DATA= \
     @top_builddir@/vmidentity/vmware-sts/packages/openidconnect-sample-rp.war \
     @top_builddir@/vmidentity/vmware-sts/packages/ROOT.war \
+    @top_builddir@/vmidentity/vmware-sts/packages/webui.war \
     @top_builddir@/vmidentity/vmware-sts/packages/lightwaveui.war
 
 sbin_SCRIPTS = \
