Enable CORS headers for vmdir rest over ldap
Change-Id: I8599be4e148736035f448581d22bce5ec6866c79

--- a/vmdir/server/rest-head/Makefile.am
+++ b/vmdir/server/rest-head/Makefile.am
@@ -21,7 +21,8 @@ librest_head_la_SOURCES += \
     operation.c \
     param.c \
     resource.c \
-    result.c
+    result.c \
+    utils.c
 
 endif
 
