vmdir replication monitoring (2nd phase)
- Created background thread framework that can easily add new periodic tasks to run in the background
- Implemented replication convergence time and one-hop time metrics

Change-Id: Idffdffaa588c39fd5f91fdaaf63de7e908e55596

--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -5,6 +5,7 @@ idl_srcdir=$(top_srcdir)/vmdir/idl
 vmdird_SOURCES = \
     accountmgmt.c \
     auth.c \
+    background.c \
     globals.c \
     heartbeat.c \
     index.c \
