Add lwraft-ui web application to browse post nodes
Change-Id: I74a9bde4942bb029767bcbc2fa444dd8c8591a64

--- a/.gitignore
+++ b/.gitignore
@@ -287,6 +287,11 @@ $RECYCLE.BIN/
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
+# lwraft-ui
+ui/lwraft-ui/stage/
+lwraft-ui/target/
+lwraft-ui/src/app/*.js*
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
