Build lightwave-ui directory browser as an independent rpm
Change-Id: I4aeafc8635457c3baa25f28b27f6c8e524ac2c71

--- a/.gitignore
+++ b/.gitignore
@@ -506,6 +506,10 @@ node_modules/
 node/
 dist/
 
+# lightwave web based UI applications
+lightwave-ui/stage/
+lightwave-ui/target/
+
 # Typescript v1 declaration files
 typings/
 
