--- a/ui/lightwave-ui/package.json
+++ b/ui/lightwave-ui/package.json
@@ -8,6 +8,7 @@
     "build": "tsc -p src/",
     "serve": "lite-server -c=bs-config.json",
     "prod": "ng build --prod --build-optimizer --base-href=./",
+    "dev": "ng build --base-href=./",
     "prestart": "npm run build",
     "start": "ng serve --host 0.0.0.0 --port 80 --disable-host-check",
     "pretest": "npm run build",
@@ -29,51 +30,51 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@angular/animations": "~4.3.1",
-    "@angular/common": "~4.3.1",
-    "@angular/compiler": "~4.3.1",
-    "@angular/compiler-cli": "~4.3.1",
-    "@angular/core": "~4.3.1",
-    "@angular/forms": "~4.3.1",
-    "@angular/http": "~4.3.1",
-    "@angular/platform-browser": "~4.3.1",
-    "@angular/platform-browser-dynamic": "~4.3.1",
-    "@angular/platform-server": "~4.3.1",
-    "@angular/router": "~4.3.1",
-    "@angular/tsc-wrapped": "~4.3.1",
-    "@angular/upgrade": "~4.3.1",
+    "@angular/animations": "4.3.1",
+    "@angular/common": "4.3.1",
+    "@angular/compiler": "4.3.1",
+    "@angular/compiler-cli": "4.3.1",
+    "@angular/core": "4.3.1",
+    "@angular/forms": "4.3.1",
+    "@angular/http": "4.3.1",
+    "@angular/platform-browser": "4.3.1",
+    "@angular/platform-browser-dynamic": "4.3.1",
+    "@angular/platform-server": "4.3.1",
+    "@angular/router": "4.3.1",
+    "@angular/tsc-wrapped": "4.3.1",
+    "@angular/upgrade": "4.3.1",
     "@webcomponents/custom-elements": "1.0.0",
-    "angular-in-memory-web-api": "~0.3.2",
+    "angular-in-memory-web-api": "0.3.2",
     "clarity-angular": "0.10.11",
     "clarity-icons": "0.10.11",
     "clarity-ui": "0.10.11",
-    "core-js": "^2.4.1",
-    "ng-pick-datetime": "^5.0.0-beta.9",
+    "core-js": "2.4.1",
+    "ng-pick-datetime": "5.0.0-beta.9",
     "ng2-bootstrap": "1.6.3",
-    "rxjs": "^5.1.0",
+    "rxjs": "5.5.6",
     "systemjs": "0.19.39",
-    "zone.js": "^0.8.4",
-    "w3-css": "4.0.4"
+    "w3-css": "4.0.4",
+    "zone.js": "0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "^1.5.3",
-    "@types/angular": "^1.5.16",
-    "@types/angular-animate": "^1.5.5",
-    "@types/angular-cookies": "^1.4.2",
-    "@types/angular-mocks": "^1.5.5",
-    "@types/angular-resource": "^1.5.6",
-    "@types/angular-route": "^1.3.2",
-    "@types/angular-sanitize": "^1.3.3",
-    "@types/node": "^6.0.45",
+    "@angular/cli": "1.6.5",
+    "@types/angular": "1.5.16",
+    "@types/angular-animate": "1.5.5",
+    "@types/angular-cookies": "1.4.2",
+    "@types/angular-mocks": "1.5.5",
+    "@types/angular-resource": "1.5.6",
+    "@types/angular-route": "1.3.2",
+    "@types/angular-sanitize": "1.3.3",
+    "@types/node": "6.0.45",
     "canonical-path": "0.0.2",
-    "rollup": "^0.41.6",
-    "rollup-plugin-commonjs": "^8.0.2",
+    "rollup": "0.41.6",
+    "rollup-plugin-commonjs": "8.0.2",
     "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-uglify": "^1.0.1",
-    "source-map-explorer": "^1.3.2",
-    "ts-node": "~3.0.4",
-    "tslint": "^3.15.1",
-    "typescript": "~2.3.2"
+    "rollup-plugin-uglify": "1.0.1",
+    "source-map-explorer": "1.3.2",
+    "ts-node": "3.0.4",
+    "tslint": "3.15.1",
+    "typescript": "2.3.2"
   },
   "repository": {}
 }
