restructuring vmdir metrics
Change-Id: Icaa937d3b71f6680e6d0f08404814ca4f07f4966

--- a/configure.ac
+++ b/configure.ac
@@ -1556,6 +1556,7 @@ AC_CONFIG_FILES([Makefile
                  vmdir/server/common/Makefile
                  vmdir/server/backend/Makefile
                  vmdir/server/mdb-store/Makefile
+                 vmdir/server/metrics/Makefile
                  vmdir/server/indexcfg/Makefile
                  vmdir/server/middle-layer/Makefile
                  vmdir/server/schema/Makefile
