--- a/vmdir/server/rest-head/Makefile.am
+++ b/vmdir/server/rest-head/Makefile.am
@@ -16,6 +16,7 @@ librest_head_la_SOURCES += \
     handler.c \
     httperror.c \
     ldapapi.c \
+    metrics.c \
     metricsapi.c \
     operation.c \
     param.c \
