PR 2037023: log func,line in vmdir/post log + port requestid to vmdir
merge conflict

1. port thread log context to vmdir

2. switch log context ownership to connection (from operation)

3. in logging, add function and line number
   (function and line number are set during BAIL statement.)

TEST:
VMDIR:t@139840611727104:INFO: reqid:  [VmDirMDBGetCandidates,603] Init Sid cache (dc=lw,dc=local) RID (1009)
VMDIR:t@139840611727104:INFO: reqid:  [VmDirInternalBindEntry,241] Bind failed () (9234)
VMDIR:t@139840611727104:ERROR: reqid:  [VmDirMLBind,67] VmDirSendLdapResult: Request (Bind), Error (49), Message (), (0) socket (192.168.73.142)
VMDIR:t@139840611727104:ERROR: reqid:  [,0] Bind Request Failed (192.168.73.142) error 49: Protocol version: 3, Bind DN: "cn=administrator,cn=users,dc=lw,dc=local", Method: Simple

VMDIR:t@140735718344448:ERROR: reqid: test-id-sung-1 [VmDirUPNToDN,727] UPN (administrator@lwraft.local) lookup failed (9106)
VMDIR:t@140735718344448:ERROR: reqid: test-id-sung-1 [VmDirRESTAuth,43] VmDirRESTAuth failed, error (9132)
VMDIR:t@140735718344448:ERROR: reqid: test-id-sung-1 [VmDirRESTProcessRequest,170] VmDirRESTProcessRequest failed, error (9132) for client: 192.168.73.142
VMDIR:t@140735718344448:WARNING: reqid: test-id-sung-1 [,0] VmDirRESTOperationWriteResponse HTTP response status (401), body ({"error_code":49,"error_message":"Invalid credentials"})

run valgrind to make sure no memory issue.

Change-Id: I1b8a871d1c9d212f1705e5cc6252ef44b8d0eefc

--- a/vmdir/common/Makefile.am
+++ b/vmdir/common/Makefile.am
@@ -32,6 +32,7 @@ libcommon_la_SOURCES = \
     stringlist.c \
     superlogutil.c \
     synchronizing.c  \
+    threadcontext.c  \
     threading.c  \
     tsstack.c \
     util.c \
