--- a/vmdir/server/Makefile.am
+++ b/vmdir/server/Makefile.am
@@ -22,6 +22,7 @@ SUBDIRS = \
     rest-head \
     middle-layer \
     replication \
+    clusterstate \
     saslvmdirdb \
     schema \
     acl \
