post metrics update (mostly porting from vmdir)
- restructuring metrics framework
- protocol + layer + type + error breakdowns

Change-Id: I1016f1fad7f81421e77cd63c1eae0a124d8fd52f

--- a/lwraft/server/middle-layer/Makefile.am
+++ b/lwraft/server/middle-layer/Makefile.am
@@ -30,7 +30,8 @@ libmiddle_layer_la_SOURCES = \
     search.c \
     specialsearch.c \
     srputil.c \
-    libmain.c
+    libmain.c \
+    util.c
 
 libmiddle_layer_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
