--- a/lwraft/server/Makefile.am
+++ b/lwraft/server/Makefile.am
@@ -17,6 +17,7 @@ SUBDIRS = \
     backend \
     $(STOREDIRS) \
     indexcfg \
+    metrics \
     ldap-head \
     rest-head \
     middle-layer \
