Build ui RPMs as part of build_photon.sh (with parameter)
Change-Id: I656bcf5a62250e93bd5460da562b5c96f2463331

--- a/.gitignore
+++ b/.gitignore
@@ -512,8 +512,8 @@ node/
 dist/
 
 # lightwave web based UI applications
-lightwave-ui/stage/
-lightwave-ui/target/
+ui/lightwave-ui/stage/
+ui/lightwave-ui/target/
 
 # Typescript v1 declaration files
 typings/
