--- a/ui/lightwave-ui/Makefile
+++ b/ui/lightwave-ui/Makefile
@@ -4,7 +4,7 @@ war:
 	mvn package
 
 package: war
-	rpmbuild --define "_topdir `pwd`/stage" -ba build/lightwave-webui.spec
+	rpmbuild --define "_topdir `pwd`/stage" -ba build/lightwave-ui.spec
 
 clean:
 	rm -r stage dist target
