--- a/ui/lwraft-ui/Makefile
+++ b/ui/lwraft-ui/Makefile
@@ -9,11 +9,11 @@ all: rpm
 
 nodejs:
 ifndef NODE
-        echo 'Installing nodeJS'
-	tdnf install nodejs-7.7.4
+        @echo 'Installing nodeJS'
+	tdnf install nodejs-7.7.4 -y
 endif
 
-ng-cli:
+ng-cli: nodejs
 ifndef NGCLI
 	npm i -g @angular/cli@1.6.3
 endif
