Enable TLS valiation for OIDC token authentication
Bug Number: 1923310

This change was made to turn on TLS validation for OIDC token
validation in both POST and VMDIR REST head.

Change-Id: I44803f2238980363c19205da41c98b1421f22b72

--- a/vmdir/server/common/Makefile.am
+++ b/vmdir/server/common/Makefile.am
@@ -14,6 +14,7 @@ libsrvcommon_la_SOURCES = \
     dcconnthr.c           \
     entryencodedecode.c   \
     krbsrvutil.c          \
+    oidctovmdirerror.c    \
     oprequestutil.c       \
     security-sd.c         \
     srp.c                 \
@@ -34,6 +35,8 @@ libsrvcommon_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/thirdparty \
     -I$(top_srcdir)/vmdir/server/include \
     -I$(top_srcdir)/vmmetrics/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/common/include/public \
+    -I$(top_srcdir)/vmidentity/ssoclients/oidc/include/public \
     @OPENSSL_INCLUDES@ \
     @DCERPC_INCLUDES@ \
     @LW_INCLUDES@
