Get the Domain Controller name from the local VMAFD
Change-Id: I81438319e2b514abe9e6020212a0457e3590508a

--- a/vmidentity/sso-config/pom.xml
+++ b/vmidentity/sso-config/pom.xml
@@ -15,6 +15,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.vmware.vmafd</groupId>
+      <artifactId>authentication-framework</artifactId>
+      <version>${vmware.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.vmware.identity</groupId>
       <artifactId>vmware-identity-install</artifactId>
       <version>${vmware.version}</version>
