vmdir replication monitoring (3rd phase)
- Implemented usn ping + metrics
- Fixed negative usn behind bug (PR 2050326)
- Replaced USN list mutex with read/write lock
- Cleaned up some old code in control.c and init.c

Change-Id: I78a7904a511785fe5ca58c5e499fa743e8234c87

--- a/vmdir/server/replication/Makefile.am
+++ b/vmdir/server/replication/Makefile.am
@@ -8,7 +8,8 @@ libreplication_la_SOURCES = \
     metrics.c \
     replentry.c \
     replqueue.c \
-    thread.c
+    thread.c \
+    utdvector.c
 
 libreplication_la_CPPFLAGS = \
     -I$(top_srcdir)/vmdir/include \
