PR 1968560: disable ldap simple bind
TEST: will work with Andrei to do codedeploy for fresh and upgrade cases.

Change-Id: I3f9146860f52123f5dc5c21de334010890cf5437

--- a/vmdir/config/vmdir.reg.in
+++ b/vmdir/config/vmdir.reg.in
@@ -38,9 +38,9 @@
 }
 
 "AllowInsecureAuthentication" = {
-    default = dword:00000001
-    value   = dword:00000001
-    doc = "Set to '1' to allow clear-text password authentication."
+    default = dword:00000000
+    value   = dword:00000000
+    doc = "Set to '0' to disallow clear-text password authentication."
 }
 
 "KerberosPort" = {
