vmdir replication monitoring (4th phase)
- implemented data replication integrity monitoring

Change-Id: I01fba9ca1bf36292773758fde316fd27fd4ceb3e

--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -12,6 +12,7 @@ vmdird_SOURCES = \
     init.c \
     instance.c \
     integritychk.c \
+    integrityrpt.c \
     ipcserver.c \
     ipclocalapi.c \
     ipcapihandler.c \
