Making Domain Join Atomic With this change, all the separate LDAP calls to join to a domain are moved to the server side. Bugs/Features: Enables 0 downtime upgrade Reviewed by : Suresh Chellappan, Sung Ruo, Amit Bapat, Kyoung Von Kwon Testing Done : Tested that the domain join works and the registry is set correctly. The machine account created is usable
Change-Id: Ieb66539dc6e6f0eaf8e743b57da38dcde133d58b

--- a/vmdir/server/common/Makefile.am
+++ b/vmdir/server/common/Makefile.am
@@ -10,6 +10,7 @@
 noinst_LTLIBRARIES = libsrvcommon.la
 
 libsrvcommon_la_SOURCES = \
+    accnt_mgmt.c          \
     candidates.c          \
     dcconnthr.c           \
     entryencodedecode.c   \
