:Add configuration in telegraf to collect sts metrics from /metrics endpoint.
Verified metrics are available from https://hostname/metrics endpoint.

Referred to vmdir metrics telegraf configurations:

[[inputs.procstat]]
  exe="vmdird"
  prefix="vmdir"

[[inputs.prometheus]]
  urls = ["http://localhost:7477/v1/vmdir/metrics"]

Change-Id: I2c8613f9e5fe152fe762c7df17e433bfa8eff05b

--- a/vmidentity/config/vmsts-telegraf.conf
+++ b/vmidentity/config/vmsts-telegraf.conf
@@ -1,3 +1,6 @@
 [[inputs.procstat]]
   pid_file="/var/log/vmware/sso/tcserver.pid"
   prefix="stsd"
+
+[[inputs.prometheus]]
+  urls = ["http://localhost:7080/metrics"]
