Add a script to update tenant password expiration days.
Tests done: ran scripts on a lw vm

Change-Id: Id1f212891c67572e18c4c154ba0cce68b959dd54

--- a/vmidentity/make-target/Makefile.am
+++ b/vmidentity/make-target/Makefile.am
@@ -57,7 +57,8 @@ vmstswebapps_DATA= \
 sbin_SCRIPTS = \
     @top_srcdir@/vmidentity/websso/src/main/resources/sso-config.sh \
     @top_builddir@/vmidentity/config/vmware-stsd.sh \
-    @top_builddir@/vmidentity/config/configure-build.sh
+    @top_builddir@/vmidentity/config/configure-build.sh \
+    @top_builddir@/vmidentity/config/configure-pwd-policy.sh
 
 vmstsconf_DATA = \
     @top_builddir@/vmidentity/config/server.xml \
