Add SSL Lock callbacks Bug(s) Addressed: 2078706 Reviewed By: Neel Shah, Suresh Chellappan, Amit Bapat, Mary Potapova Approved By: Suresh Chellappan Testing: Added unit test to generate random numbers from multiple threads and tested that the locking is exercised
Change-Id: I171641d9a5022a2fd4690930b235acdd1d0d6f08

--- a/vmidentity/ssoclients/common/src/Makefile.am
+++ b/vmidentity/ssoclients/common/src/Makefile.am
@@ -27,7 +27,8 @@ libssocommon_la_CPPFLAGS = \
 libssocommon_la_LIBADD = \
     @JANSSON_LIBS@ \
     @CURL_LIBS@ \
-    @CRYPTO_LIBS@
+    @CRYPTO_LIBS@ \
+    @PTHREAD_LIBS@
 
 libssocommon_la_LDFLAGS = \
     @JANSSON_LDFLAGS@ \
