--- a/vmidentity/ssoclients/common/test/Makefile.am
+++ b/vmidentity/ssoclients/common/test/Makefile.am
@@ -2,7 +2,8 @@ bin_PROGRAMS = ssocommontest
 
 ssocommontest_SOURCES = \
     main.c \
-    test_cases.c
+    test_cases.c \
+    test_ssl_random.c
 
 ssocommontest_CPPFLAGS = \
     -I$(top_srcdir)/vmidentity/ssoclients/common/include/ \
@@ -12,7 +13,8 @@ ssocommontest_LDADD = \
     @top_builddir@/vmidentity/ssoclients/common/src/libssocommon.la \
     @JANSSON_LIBS@ \
     @CURL_LIBS@ \
-    @CRYPTO_LIBS@
+    @CRYPTO_LIBS@ \
+		@PTHREAD_LIBS@
 
 ssocommontest_LDFLAGS = \
     @JANSSON_LDFLAGS@ \
