Replace Raft DCERPC calls with LDAP controls/search
PR 1977930
Test cases:
1. Regression all Raft opertations (LDAP add/modify/delete/search) with 3 nodes setup.
2. Randomly kill Raft leaders under LDAP write/search load.
3. Randomly kill ESXi VMs with write/search load toward (new) leader.
4. Run case 1 with Valgrind for memory leak.

Change-Id: I6889f870ed5491ca9d8fadab65f829152df4ade3

--- a/lwraft/server/replication/Makefile.am
+++ b/lwraft/server/replication/Makefile.am
@@ -6,7 +6,8 @@ libreplication_la_SOURCES = \
     firstreplcycle.c \
     metricsinit.c \
     replentry.c \
-    thread.c
+    thread.c \
+    raftldaprpc.c
 
 libreplication_la_CPPFLAGS = \
     -I$(top_srcdir)/lwraft/include \
